# TraderJohn-Database

./: .env.template  README.md  initialize_nltk.py  main.py  makefile  pyproject.toml  qwe.py  requirements.txt
sample_data/json_sample/: crime_rate.json  real_estate.json
utils/: data_processing.py  execute_query.py  format.py  mongodb_query_generator.py  query_data.py  query_generator.py  query_processer.py  samples.py
