[tool.poetry]
name = "traderjohn"
version = "0.1.0"
description = ""
authors = ["johnson70630 <johnson70630@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.6"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
nltk = "^3.9.1"
sqlparse = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
